# ai-video-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
assets/: styles.css
core/: config.py  extractor.py  llm.py  rag_engine.py  summarizer.py  transcriber.py  vector_store.py
samples/: README.md  fake_meeting.txt
utils/: audio_processor.py
