[project]
name = "ai-video-assistant"
version = "0.1.0"
description = "Transcribe, summarise and chat with any meeting video — Whisper + Sarvam + LangChain RAG, wrapped in a Streamlit UI."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Ajay Reddy" }]
keywords = ["whisper", "langchain", "rag", "streamlit", "meeting-assistant", "mistral"]

dependencies = [
    # ── Audio / Video ─────────────────────────────────────────────────────────
    "yt-dlp",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",

    # ── Speech-to-Text (Whisper) ──────────────────────────────────────────────
    "openai-whisper>=20231117",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "torchvision>=0.17.0",

    # ── LLM orchestration ─────────────────────────────────────────────────────
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-mistralai>=0.1.0",
    "langchain-huggingface>=0.0.3",
    "langchain-chroma>=0.1.0",
    "mistralai>=0.4.0",

    # ── RAG ───────────────────────────────────────────────────────────────────
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.23.0",
    "tiktoken>=0.7.0",

    # ── UI ────────────────────────────────────────────────────────────────────
    "streamlit>=1.35.0",
    "watchdog>=4.0.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "utils"]
